# synapses-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bundle-binary.sh  homebrew-cask.rb
src/: App.css  App.tsx  api.ts  app.css  platform.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/__mocks__/@tauri-apps/: plugin-dialog.ts  plugin-os.ts
src/__mocks__/@tauri-apps/api/: event.ts
src/__tests__/: Agents.test.tsx  Analytics.test.tsx  App.test.tsx  Dashboard.test.tsx  Explorer.test.tsx  Memory.test.tsx  Models.test.tsx  Onboarding.test.tsx  Privacy.test.tsx  Projects.test.tsx  ServiceCard.test.tsx  Settings.test.tsx  Sidebar.test.tsx  StatusStrip.test.tsx  ToastContext.test.tsx  Toasts.test.tsx  analytics-helpers.test.ts  useServices.test.ts
src/components/: ConfigEditor.tsx  ProgressBar.tsx  ServiceCard.tsx  Sidebar.tsx  StatusCard.tsx  StatusStrip.tsx  TabBar.tsx  Toasts.tsx
src/context/: ToastContext.tsx
src/hooks/: useMCPTool.ts  useServices.ts
src/pages/: Activity.tsx  Agents.tsx  Analytics.tsx  Brain.tsx  Dashboard.tsx  Explorer.tsx  Memory.tsx  Models.tsx  Onboarding.tsx  Privacy.tsx  ProjectDetail.tsx  Projects.tsx  Scout.tsx  Settings.tsx
